Updates for mypy. Note, there is a decent amount of type ignore because the docker copies everything into a single directory, but the api is in a sub for the package. This could be refactored later.
